--- a/patioLightsHost/www/css/style.css
+++ b/patioLightsHost/www/css/style.css
@@ -56,4 +56,80 @@ h1{
 #inner
 {
     padding: 10px;
+    text-align:center;
+}
+
+#lightForm
+{
+    /*border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 10px;*/
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 10px auto;
+    display: block;
+    line-height: 2;
+    max-width: 90%;
+}
+
+#lightForm > input
+{
+    
+}
+
+.parameter {
+    display:block;
+}
+#status
+{
+    /*text-align:center;*/
+} 
+
+/* small screen and mobile phones */
+@media only screen and (max-width: 1000px)
+                   and (orientation: portrait)
+{
+    #wrapper
+    {
+        max-width: 95%;
+        margin: 5px auto;
+    }
+    #inner
+    {
+        padding: 0px;
+    }
+    #lightForm
+    {
+        max-width: 100%;
+        width: 90%;
+        margin: 0px auto;
+        padding: 0px;
+    }
+    .parameter
+    {
+       display: inline-block;    
+    }
+    *
+    { 
+	font-size: 107%;
+    }
+    h1{
+        font-size: 250%;
+    }
+}
+
+/* this applies to desktops as well */
+@media only screen and (orientation: landscape)
+{
+    *{
+        font-size: 103%;
+    }
+    h1{
+        font-size: 220%;
+    }
+}
+
+/* transition */
+*
+{
+    transition: ease-out 0.5s;
 }
